# tsg4

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  config.ini  graph.py  main.py  plots.py  pyproject.toml  requirements.txt  tree.py
docs/: README.md  gack.md  genome.md  stuff.md  things.md
tsg/: __init__.py  base_manager.py  base_tsg.py  gack.py  gack_manager.py  genome.py  stuff.py  stuff_manager.py  thing.py  thing_manager.py  tsg_config.py  types.py  world.py
