[tool.poetry]
name = "tsg4"
version = "0.0.0"
description = "Life sim"
authors = ["Robin Tregaskis <lokidokicoki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.4.1"

[tool.black]
line_length = 100

[fool.flake8]
line-length=100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
