[tool.poetry]
name = "tsg4"
version = "0.5.0"
description = "Life sim"
authors = ["Robin Tregaskis <lokidokicoki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.4.1"
commitizen = "^3.5.2"

[tool.black]
line_length = 100

[tool.pylint]
max-line-length=100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

